--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <img src="./assets/piece-red.svg" alt="Red player score" />
           </div>
         </div>
+        <div class="info-box winner" id="winner"><p>alert box</p></div>
       </aside>
       <div id="app"></div>
     </main>
