--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <img src="./assets/piece-red.svg" alt="Red player score" />
           </div>
         </div>
-        <div class="info-box winner" id="winner"><p>alert box</p></div>
+        <div class="info-box winner" id="winner"></div>
+        <div class="info-box" id="restart">
+          <p>Restart?</p>
+          <button id="restart-btn">Tak!</button>
+        </div>
       </aside>
       <div id="app"></div>
     </main>
